--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="css/styles.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Layout</title>
+    <title>Our Menu</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Page Heading</h1>
-    <section class="section section1">
-        <div class="section-title">Chicken</div>
-        <p>Some dummy text for the chicken section.</p>
-    </section>
-    <section class="section section2">
-        <div class="section-title">Beef</div>
-        <p>Some dummy text for the beef section.</p>
-    </section>
-    <section class="section section3">
-        <div class="section-title">Sushi</div>
-        <p>Some dummy text for the sushi section.</p>
-    </section>
+    <h1>Our Menu</h1>
+    <div class="container">
+        <div class="section" style="background-color: #D3D3D3;">
+            <div class="section-title" style="background-color: #E9967A;">Chicken</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="section" style="background-color: #D3D3D3;">
+            <div class="section-title" style="background-color: #CD5C5C;">Beef</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="section" style="background-color: #D3D3D3;">
+            <div class="section-title" style="background-color: #F5DEB3;">Sushi</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+    </div>
 </body>
 </html>
